@@ -33,6 +33,7 @@ In programs:
 * Fixed sfpen (via dovplot) bug
 * Fixed sflosignoi bug
 * Fixed sfdots axis-positioning bug
+* Fixed sfmath crash when datapath was specified
 
 In the build system:
 * Fixed bug that resulted in BLAS/ATLAS-based programs to not install in Fedora
